更新图片资源和相应代码。 删除emojione资源，添加facebook资源。

--- a/chromoji/chrome/options.html
+++ b/chromoji/chrome/options.html
@@ -15,10 +15,10 @@
 <div id="style-list" class="storage-list" data-storage="type">
 
     <select name="style" class="style">
-        <option value="emojione">EmojiOne</option>
-        <option value="twitter">Twitter</option>
         <option value="apple">Apple</option>
+        <option value="facebook">Facebook</option>
         <option value="google">Google</option>
+        <option value="twitter">Twitter</option>
     </select>
 
     <h2>Scale</h2>
@@ -29,11 +29,13 @@
         <option value="1.5">150%</option>
         <option value="1.75">175%</option>
         <option value="2">200%</option>
+        <option value="3">300%</option>
+        <option value="4">400%</option>
     </select>
 </div>
 
 <span class="attribution-example">
-          Emoji provided free by <a href="http://emojione.com">Emoji One</a>
+          Emoji lib provided by <a href="https://github.com/iamcal/emoji-data">emoji-data</a>
         </span>
 <script src="jquery.js"></script>
 <script src="options.js"></script>
